# active-grasping

./: .gitignore  CMakeLists.txt  README.md  evaluation.py  evaluation2.py  execution.sh  logfile.json  logfile_rho_2.json  main.cpp  main_active_grasping.py  main_bo.py  main_gramacy.py  main_ui.cpp
ActiveGrasping/: CMakeLists.txt
ActiveGrasping/include/ActiveGrasping/: ActiveGraspingOpt.h  ActiveGraspingOptParams.h
ActiveGrasping/python/: active_grasping.py  test.py
ActiveGrasping/src/: ActiveGraspingOpt.cpp
ActiveGraspingOpt/: CMakeLists.txt
ActiveGraspingOpt/python/: CMakeLists.txt  active_grasping.py  active_grasping_opt.py  active_grasping_params.py  bayesopt_executor.py  datalog.py  grasp_models.py  metrics.py  sigopt_executor.py  utils.py
ActiveGraspingOpt/pythonS/: CMakeLists.txt  active_grasping.py  datalog.py  grasp_models.py  metrics.py  sigopt_executor.py  utils.py
ActiveGraspingOpt/src/: ActiveGraspingOpt.cpp
Grasp/: CMakeLists.txt  CMakeLists_old.txt
Grasp/include/Grasp/: Grasp.hpp  GraspExecutor.hpp  GraspPlanner.hpp  GraspPlannerIK.hpp  GraspPlannerIKParams.hpp  GraspPlannerParams.hpp  GraspPlannerS.hpp  GraspPlannerSParams.hpp  GraspPlannerSpherical.hpp  GraspPlannerWindow.h  GraspResult.hpp  GraspVars.hpp
Grasp/include/grasp/: GraspPlannerParams.hpp  TestGramacyExecutor.hpp
Grasp/python/: CMakeLists.txt  compile_and_add.sh  gutils.py  pygrasp.i  test.py
Grasp/src/: GraspPlanner.cpp  GraspPlannerIK.cpp  GraspPlannerIKParams.cpp  GraspPlannerIntersection.cpp  GraspPlannerParams.cpp  GraspPlannerS.cpp  GraspPlannerSParams.cpp  GraspPlannerWindow.cpp  TestGramacyExecutor.cpp
Grasp/utils/: CMakeLists.txt  GraspPlanner.ui  GraspPlannerIK.cpp  GraspPlannerIK.hpp  GraspPlannerIK.ui  GraspPlannerIKParams.cpp  GraspPlannerIKParams.hpp  GraspPlannerIKV1.cpp  GraspPlannerIKWindow.cpp  GraspPlannerIKWindow.h  GraspPlannerIKui.cpp  GraspPlannerIKui.h  GraspPlannerWindow.cpp  GraspPlannerWindow.h  GraspPlannerWindowS.cpp  IKRRT.ui  IKRRTDemo copy.cpp  IKRRTDemo.cpp  IKRRTWindow.cpp  IKRRTWindow.h  grasp_ik_visualization.cpp  grasp_visualization.cpp  grasp_visualizationS.cpp  utils.hpp
config/: active_grasp_params.json  bopt_params.json  grasp_params.json  icub_robot.json  obj_water.json
config/bayesopt/: bopt_params_default.json
config/gramacy/: bopt_params.json  gramacy_opt_params.json
config/grasp/: gopt_polars_norho.json  gopt_xy.json  gopt_xyz.json  gopt_xz.json  gopt_yz.json  gopt_z.json  grasp_params.json  icub_robot_visualization.json
config/grasp/params/: grasp_visualization.json  icub_robot_visualization.json  obj_trophy.json
config/grasp/sigopt/: multisol.json  opt.json
config/graspIK/: gopt_xy.json
config/graspIK/sigopt/: grasp.json  opt.json
config/graspIK/tests/: bopt_params.json  sopt_params.json  test_graspIK.xml
config/scenes/: graspIK.xml  test.json  test_icub_scene.xml
config/sigopt/: gramacy.json  grasp.json  grasp_multisol.json  test_grasp.json
config_spherical/gramacy/tests/: gopt_params.json  sigopt_params.json
config_spherical/grasp/: gopt_polars.json  gopt_xyzr.json  gopt_xyzrpy.json
config_spherical/grasp/params/: grasp_params.json  icub_robot.json  icub_robot_visualization.json  obj_escult.json  obj_rice_physics.json  obj_water.json
config_spherical/grasp/tests/: bopt_params.json  gopt_spherical.json  grasp_params.json  obj_water.json
config_spherical/graspIK/gopt/: gopt_xyz.json
config_spherical/graspIK/params/: grasp_params.json
config_spherical/graspIK/sigopt/: opt.json
config_spherical/graspIK/tests/: grasp_params.json
config_spherical/sigopt/: allconstraint.json  grasp.json  multisol.json
include/bayes/: ActiveGraspingOpt.h  ActiveGraspingOptParams.h  GraspExecutor.hpp  TestGramacyExecutor.hpp
include/grasp/: GraspPlanner.hpp  GraspPlannerParams.hpp  GraspPlannerWindow.h
include/utils/: GraspResult.hpp  GraspVars.hpp
logfiles/: logfile.json  logfile_rho.json  logfile_spherical.json
logfiles_intersection/: logfile_intersection_5.json
logfiles_spherical/: logfile_spherical_5.json
logfiles_spherical_or/: logfile_spherical_or3.json
logs/grasp/bayesopt/: bottle_all_best.json
logs/grasp/bayesopt/animal_statue/: res_yzr_1.json  res_yzr_10.json  res_yzr_2.json  res_yzr_3.json  res_yzr_4.json  res_yzr_5.json  res_yzr_6.json  res_yzr_7.json  res_yzr_8.json  res_yzr_9.json
logs/grasp/bayesopt/bottle/: res_xyz_1.json  res_xyz_10.json  res_xyz_2.json  res_xyz_3.json  res_xyz_4.json  res_xyz_5.json  res_xyz_6.json  res_xyz_7.json  res_xyz_8.json  res_xyz_9.json
logs/grasp/bayesopt/trophy/: res_xyz_1.json  res_xyz_10.json  res_xyz_2.json  res_xyz_3.json  res_xyz_4.json  res_xyz_5.json  res_xyz_6.json  res_xyz_7.json  res_xyz_8.json  res_xyz_9.json
logs/grasp/sigopt/animal_statue/: animal_statue_all_constraint_all_bests.json  animal_statue_ms_all_bests.json  animal_statue_opt_all_bests.json
logs/tests/: gramacy_bopt.json  gramacy_sopt.json  graspIK_bopt.json  graspIK_sopt.json  grasp_bopt.json  grasp_sopt.json
logs_spherical/logfiles/: logfile_bounds.json  logfile_changeO.json  logfile_intersect.json  logfile_prueba.json  logfile_spherical_best.json
logs_spherical/logfiles_intersection/: logfile_intersection_1.json  logfile_intersection_2.json  logfile_intersection_3.json  logfile_intersection_4.json
logs_spherical/logfiles_intersection_or/: logfile_intersection_or1.json  logfile_intersection_or2.json  logfile_intersection_or3.json  logfile_intersection_or4.json  logfile_intersection_or5.json
logs_spherical/logfiles_spherical/: logfile_spherical_1.json  logfile_spherical_2.json  logfile_spherical_3.json  logfile_spherical_4.json
logs_spherical/logfiles_spherical_or/: logfile_spherical_or1.json  logfile_spherical_or2.json  logfile_spherical_or4.json  logfile_spherical_or5.json
src/bayes/: ActiveGraspingOpt.cpp  TestGramacyExecutor.cpp
src/grasp/: GraspPlanner.cpp  GraspPlannerWindow.cpp
test/: CMakeLists.txt  test_active_grasp.py  test_bopt.py  test_gramacy_sigopt.py  test_grasp.py  test_libs.cpp  test_sigopt.py  test_ui.cpp
(+447 files in other folders)
